src/test/deca/context/valid/SansObjet/DeclVar-Greater-boolean-float-int.deca
// Description:
//    Declaration of a boolean variable using > operation between a float variable and int .
// 
// Results:
//     nothing
// 
// Historique: 
//    cree le 11/01/2022 

{
    float x =  2.5; 
    int y = 20; 
    boolean z = 2.5 > 20; 
}
